--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "lodash": "^4.17.4",
     "nodemon": "^1.11.0"
   },
+  "devDependencies": {
+    "cross-env": "^7.0.2"
+  },
   "scripts": {
     "start": "nodemon index.js",
-    "inspect": "nodemon --inspect --trace-warnings index.js"
+    "start-dev": "cross-env NODE_ENV=development nodemon index.js",
+    "dev": "nodemon --inspect --trace-warnings index.js"
   },
   "engines": {
     "node": ">=7.6.0"
